v1.0.0/modules/schema/pages/class/LoadComposite.adoc
= `LoadComposite`
:toclevels: 4


+++Combined static load and induction motor load effects.
The dynamics of the motor are simplified by linearizing the induction machine equations.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadComposite`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/LoadDynamics.adoc[`LoadDynamics`]
*** *`LoadComposite`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
LoadComposite {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





EnergyConsumer {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





LoadComposite -> EnergyConsumer: EnergyConsumer


LoadComposite -> DiagramObject: DiagramObjects


LoadComposite -> InstanceSet: InstanceSet


LoadComposite -> Name: Names


LoadComposite -> ChangeSetMember: PropertiesCIMDataObject


LoadComposite -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<epfd,`epfd`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Active load-frequency dependence index (dynamic) (<i>Epfd</i>).  Typical value = 1,5.+++

| <<epfs,`epfs`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Active load-frequency dependence index (static) (<i>Epfs</i>).  Typical value = 1,5.+++

| <<epvd,`epvd`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Active load-voltage dependence index (dynamic) (<i>Epvd</i>).  Typical value = 0,7.+++

| <<epvs,`epvs`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Active load-voltage dependence index (static) (<i>Epvs</i>).  Typical value = 0,7.+++

| <<eqfd,`eqfd`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Reactive load-frequency dependence index (dynamic) (<i>Eqfd</i>).  Typical value = 0.+++

| <<eqfs,`eqfs`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Reactive load-frequency dependence index (static) (<i>Eqfs</i>).  Typical value = 0.+++

| <<eqvd,`eqvd`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Reactive load-voltage dependence index (dynamic) (<i>Eqvd</i>).  Typical value = 2.+++

| <<eqvs,`eqvs`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Reactive load-voltage dependence index (static) (<i>Eqvs</i>).  Typical value = 2.+++

| <<h,`h`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant (<i>H</i>) (&gt;= 0).  Typical value = 2,5.+++

| <<lfac,`lfac`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Loading factor (<i>L</i><i><sub>fac</sub></i>). The ratio of initial <i>P</i> to motor MVA base.  Typical value = 0,8.+++

| <<pfrac,`pfrac`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of constant-power load to be represented by this motor model (<i>P</i><i><sub>FRAC</sub></i>) (&gt;= 0,0 and &lt;= 1,0).  Typical value = 0,5.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<EnergyConsumer,`EnergyConsumer`>>
| 0..*
| xref::class/EnergyConsumer.adoc[`EnergyConsumer`]
| +++Energy consumer to which this dynamics load model applies.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EnergyConsumer]
=== `EnergyConsumer`
+++Energy consumer to which this dynamics load model applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadDynamics.EnergyConsumer`
| Cardinality
| 0..*
| Type
| xref::class/EnergyConsumer.adoc[`EnergyConsumer`]

| Inherited from
| xref::class/LoadDynamics.adoc[`LoadDynamics`]


|===

//[discrete]
[#epfd]
=== `epfd`
+++Active load-frequency dependence index (dynamic) (<i>Epfd</i>).  Typical value = 1,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.epfd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#epfs]
=== `epfs`
+++Active load-frequency dependence index (static) (<i>Epfs</i>).  Typical value = 1,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.epfs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#epvd]
=== `epvd`
+++Active load-voltage dependence index (dynamic) (<i>Epvd</i>).  Typical value = 0,7.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.epvd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#epvs]
=== `epvs`
+++Active load-voltage dependence index (static) (<i>Epvs</i>).  Typical value = 0,7.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.epvs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#eqfd]
=== `eqfd`
+++Reactive load-frequency dependence index (dynamic) (<i>Eqfd</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.eqfd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#eqfs]
=== `eqfs`
+++Reactive load-frequency dependence index (static) (<i>Eqfs</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.eqfs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#eqvd]
=== `eqvd`
+++Reactive load-voltage dependence index (dynamic) (<i>Eqvd</i>).  Typical value = 2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.eqvd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#eqvs]
=== `eqvs`
+++Reactive load-voltage dependence index (static) (<i>Eqvs</i>).  Typical value = 2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.eqvs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#h]
=== `h`
+++Inertia constant (<i>H</i>) (&gt;= 0).  Typical value = 2,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.h`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#lfac]
=== `lfac`
+++Loading factor (<i>L</i><i><sub>fac</sub></i>). The ratio of initial <i>P</i> to motor MVA base.  Typical value = 0,8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.lfac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pfrac]
=== `pfrac`
+++Fraction of constant-power load to be represented by this motor model (<i>P</i><i><sub>FRAC</sub></i>) (&gt;= 0,0 and &lt;= 1,0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.pfrac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


