v1.1.0/modules/schema/pages/class/LoadComposite.adoc
= `LoadComposite`
:toclevels: 4


+++Combined static load and induction motor load effects.
The dynamics of the motor are simplified by linearizing the induction machine equations.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadComposite`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/LoadDynamics.adoc[`LoadDynamics`]
*** *`LoadComposite`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<epfd,`epfd`>>
//| [[slots_table.epfd]]<<epfd,`epfd`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Active load-frequency dependence index (dynamic) (<i>Epfd</i>).  Typical value = 1,5.+++
| _n/a_

| <<epfs,`epfs`>>
//| [[slots_table.epfs]]<<epfs,`epfs`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Active load-frequency dependence index (static) (<i>Epfs</i>).  Typical value = 1,5.+++
| _n/a_

| <<epvd,`epvd`>>
//| [[slots_table.epvd]]<<epvd,`epvd`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Active load-voltage dependence index (dynamic) (<i>Epvd</i>).  Typical value = 0,7.+++
| _n/a_

| <<epvs,`epvs`>>
//| [[slots_table.epvs]]<<epvs,`epvs`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Active load-voltage dependence index (static) (<i>Epvs</i>).  Typical value = 0,7.+++
| _n/a_

| <<eqfd,`eqfd`>>
//| [[slots_table.eqfd]]<<eqfd,`eqfd`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Reactive load-frequency dependence index (dynamic) (<i>Eqfd</i>).  Typical value = 0.+++
| _n/a_

| <<eqfs,`eqfs`>>
//| [[slots_table.eqfs]]<<eqfs,`eqfs`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Reactive load-frequency dependence index (static) (<i>Eqfs</i>).  Typical value = 0.+++
| _n/a_

| <<eqvd,`eqvd`>>
//| [[slots_table.eqvd]]<<eqvd,`eqvd`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Reactive load-voltage dependence index (dynamic) (<i>Eqvd</i>).  Typical value = 2.+++
| _n/a_

| <<eqvs,`eqvs`>>
//| [[slots_table.eqvs]]<<eqvs,`eqvs`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Reactive load-voltage dependence index (static) (<i>Eqvs</i>).  Typical value = 2.+++
| _n/a_

| <<h,`h`>>
//| [[slots_table.h]]<<h,`h`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant (<i>H</i>) (&gt;= 0).  Typical value = 2,5.+++
| _n/a_

| <<lfac,`lfac`>>
//| [[slots_table.lfac]]<<lfac,`lfac`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Loading factor (<i>L</i><i><sub>fac</sub></i>). The ratio of initial <i>P</i> to motor MVA base.  Typical value = 0,8.+++
| _n/a_

| <<pfrac,`pfrac`>>
//| [[slots_table.pfrac]]<<pfrac,`pfrac`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Fraction of constant-power load to be represented by this motor model (<i>P</i><i><sub>FRAC</sub></i>) (&gt;= 0,0 and &lt;=...+++
| _n/a_

| <<EnergyConsumer,`EnergyConsumer`>>
//| [[slots_table.EnergyConsumer]]<<EnergyConsumer,`EnergyConsumer`>>
| 0..* +
xref::class/EnergyConsumer.adoc[`EnergyConsumer`]
| +++Energy consumer to which this dynamics load model applies.+++
| xref::class/LoadDynamics.adoc[`LoadDynamics`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EnergyConsumer]
=== `EnergyConsumer`
+++Energy consumer to which this dynamics load model applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadDynamics.EnergyConsumer`
| Cardinality
| 0..*
| Type
| xref::class/EnergyConsumer.adoc[`EnergyConsumer`]

| Inherited from
| xref::class/LoadDynamics.adoc[`LoadDynamics`]


|===

////
[.text-left]
--
<<slots_table.EnergyConsumer,&#10548;>>
--
////


//[discrete]
[#epfd]
=== `epfd`
+++Active load-frequency dependence index (dynamic) (<i>Epfd</i>).  Typical value = 1,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.epfd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.epfd,&#10548;>>
--
////


//[discrete]
[#epfs]
=== `epfs`
+++Active load-frequency dependence index (static) (<i>Epfs</i>).  Typical value = 1,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.epfs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.epfs,&#10548;>>
--
////


//[discrete]
[#epvd]
=== `epvd`
+++Active load-voltage dependence index (dynamic) (<i>Epvd</i>).  Typical value = 0,7.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.epvd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.epvd,&#10548;>>
--
////


//[discrete]
[#epvs]
=== `epvs`
+++Active load-voltage dependence index (static) (<i>Epvs</i>).  Typical value = 0,7.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.epvs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.epvs,&#10548;>>
--
////


//[discrete]
[#eqfd]
=== `eqfd`
+++Reactive load-frequency dependence index (dynamic) (<i>Eqfd</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.eqfd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.eqfd,&#10548;>>
--
////


//[discrete]
[#eqfs]
=== `eqfs`
+++Reactive load-frequency dependence index (static) (<i>Eqfs</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.eqfs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.eqfs,&#10548;>>
--
////


//[discrete]
[#eqvd]
=== `eqvd`
+++Reactive load-voltage dependence index (dynamic) (<i>Eqvd</i>).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.eqvd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.eqvd,&#10548;>>
--
////


//[discrete]
[#eqvs]
=== `eqvs`
+++Reactive load-voltage dependence index (static) (<i>Eqvs</i>).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.eqvs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.eqvs,&#10548;>>
--
////


//[discrete]
[#h]
=== `h`
+++Inertia constant (<i>H</i>) (&gt;= 0).  Typical value = 2,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.h`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.h,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#lfac]
=== `lfac`
+++Loading factor (<i>L</i><i><sub>fac</sub></i>). The ratio of initial <i>P</i> to motor MVA base.  Typical value = 0,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.lfac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.lfac,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pfrac]
=== `pfrac`
+++Fraction of constant-power load to be represented by this motor model (<i>P</i><i><sub>FRAC</sub></i>) (&gt;= 0,0 and &lt;= 1,0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadComposite.pfrac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.pfrac,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
